@@ -3164,6 +3164,16 @@ command to generate the output files.
     </magic>
     <glob pattern="*.py"/>
   </mime-type>
+  <mime-type type="text/x-lua">
+    <sub-class-of type='application/x-executable'/>
+    <sub-class-of type="text/plain"/>
+    <_comment>Lua script</_comment>
+    <magic priority="50">
+      <match type="string" value="/bin/lua" offset="0"/>
+      <match type="string" value="/bin/env lua" offset="0"/>
+    </magic>
+    <glob pattern="*.lua"/>
+  </mime-type>
   <mime-type type="text/x-readme">
     <sub-class-of type="text/plain"/>
     <_comment>README document</_comment>
